@@ -126,6 +126,7 @@ exports.check_timeout = 250;
 exports.genesis_tx = "65f705d2f385dc85763a317b3ec000063003d6b039546af5d8195a5ec27ae410";
 exports.genesis_block = "b2926a56ca64e0cd2430347e383f63ad7092f406088b9b86d6d68c2a34baef51";
 
+exports.use_rpc = false;
 exports.heavy = false;
 exports.lock_during_index = false;
 exports.txcount = 100;
