@@ -8,6 +8,7 @@
     "test": "node ./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
+    "bitcoin-core": "^2.0.0",
     "bitcoin-node-api": "0.1.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
